fix bugs, swaggers, improve docs
